# analogues

./: .env  .gitignore  Cargo.toml  commands.md  diag.sh
.agents/agents/: workflow-task-reviewer.md
config/: development.yaml  test.yaml
crates/blackboard-swarm/: Cargo.toml  README.md
crates/blackboard-swarm/src/: adapter.rs  blackboard.rs  document.rs  entry.rs  error.rs  evidence.rs  id_gen.rs  ids.rs  lib.rs  model.rs  obligation.rs  orchestrator.rs  persistence.rs  quality.rs  runtime.rs  signal.rs  synthesis.rs  task.rs  worker.rs  worker_run.rs
crates/blackboard-swarm/src/store/: memory.rs  mod.rs  sqlite.rs
docs/: 00-product-brief.md  01-glossary.md  01-pipeline-plan.md  02-orchestration-styles-comparison.md  02-pre-system-map-questions.md  02-system-map.md  03-system-map.md  blackboard-concept-design.md  todo.md
docs/adr/: 01-simple-pipeline-proposal.md  02-canonical-metric-tiering.md  03-concept-freshness-tiers.md
docs/contracts/: concept-catalog.md  monte-carlo-engine.md  report-payload-compiler.md  scenario-calculator.md  sec-facts-provider.md  workspace-store.md
docs/design/: multi-strategy-scenario-projection.md
docs/qa/: 06-06-001-data-quality-report.md  06-06-002-phase-5-sqlite3-orcl-analysis.md  06-06-003-database-structure-analysis.md  06-07-001-sec-raw-facts-rust-vs-sql-analysis.md  06-07-002-advanced-sqlite-testing-options.md  06-07-003-fixture-based-automated-canon-metric-checks.md  06-08-001-data-quality-report.md  06-08-002-data-quality-microsoft.md  06-15-003-report-ui-quality.md  (+22 more)
examples/: playground.rs
src/: app.rs  lib.rs
(+185 files in other folders)
