[package]
name = "blackboard-swarm"
version = "0.1.0"
edition = "2021"
description = "Domain-neutral blackboard runtime for iterative, source-grounded agent swarms"
publish = false

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }

[dev-dependencies]
tempfile = "=3.10.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
